--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <div class="jumbotron text-center">
           <h1>Hangman</h1>
           <h2 id=instruction>Press Any Key to Get Started!</h2>
+          <h2 id=instruction2></h2>
           <h1 id=displayWord></h1>
           <h1 id=displayLetter></h1>
+          <h3 id=missedLetters></h3>
           <h3 id=numberOfMisses></h3>
+
         </div>
     </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
