basic functioning game

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
           <h1>Hangman</h1>
           <h2 id=instruction>Press Any Key to Get Started!</h2>
           <h2 id=instruction2></h2>
+          <h2 id=gamestats></h2>
           <h1 id=displayWord></h1>
           <h1 id=displayLetter></h1>
           <h3 id=missedLetters></h3>
           <h3 id=numberOfMisses></h3>
+
 
         </div>
     </div>
