--- a/index.html
+++ b/index.html
@@ -4,24 +4,42 @@
     <meta charset="UTF-8">
     <title>Hangman</title>      
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Ultra' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--  -->
   </head>
 
   <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 text-center">
+        <h1 id="hangman">HANGMAN</h1>
+      </div>
+      <div class="col-md-5 text-center score">
+        <h2 id="gamestats"></h2>
+      </div>
+     </div> 
+  </div>
+</nav>
     <div class="container">
-        <div class="jumbotron text-center">
-          <h1>Hangman</h1>
-          <h2 id=instruction>Press Any Key to Get Started!</h2>
-          <h2 id=instruction2></h2>
-          <h2 id=gamestats></h2>
-          <h1 id=displayWord></h1>
-          <h1 id=displayLetter></h1>
-          <h3 id=missedLetters></h3>
-          <h3 id=numberOfMisses></h3>
-
-
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <div class="jumbotron">
+            <h2 id="instruction">Press Any Key to Get Started!</h2>
+            <h2 id="instruction2"></h2>
+            <br>            
+            <h1 id="displayWord"></h1>
+            <br> 
+            <h2 id="displayLetter"></h2>
+            <br> 
+            <h3 id="missedLetters"></h3>
+            <br> 
+            <h3 id="numberOfMisses"></h3>
+          </div>
         </div>
+      </div>
     </div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
   </body>
