--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="col-md-2 text-center">
         <h1 id="hangman">HANGMAN</h1>
       </div>
+      
       <div class="col-md-5 text-center score">
         <h2 id="gamestats"></h2>
       </div>
@@ -40,7 +41,17 @@
           </div>
         </div>
       </div>
+      
     </div>
+     <footer class="footer">
+      <div class="container">
+        <div class="playsixty">
+        <audio controls id="sixty">
+          <source src="https://r5---sn-n4v7sn7s.googlevideo.com/videoplayback?ipbits=0&sparams=clen%2Cdur%2Cei%2Cgir%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Ckeepalive%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Crequiressl%2Csource%2Cupn%2Cexpire&keepalive=yes&itag=251&requiressl=yes&initcwndbps=695000&mime=audio%2Fwebm&upn=RUPcu5WteUk&mt=1493406571&ei=4ZMDWePEGc_j-gPs2YGQDg&pl=24&gir=yes&expire=1493428289&clen=3020922&id=o-ANMKgmpsP4iHNuPSySeTGMK44rEDMxz52euZwk2J34iz&dur=193.121&mm=31&mn=sn-n4v7sn7s&ms=au&source=youtube&mv=m&ip=104.200.151.34&key=yt6&lmt=1449551531642521&alr=yes&ratebypass=yes&signature=77979CC8E63D5B3D7652FFCFA196F2BC911702DA.6353068F313A821D91C74A35D1B6B8176E7DCE72&cpn=-KxRO5NXnSRVMsAR&c=WEB&cver=1.20170427&rn=1&rbuf=0" type="audio/mpeg">
+        </audio>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
   </body>
 </html>
